--- a/auf_savoirs_en_partage/templates/accounts/new_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/new_password.html
@@ -1,9 +1,9 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>Demande de changement de mot de passe</h4>
+<h1>Demande de changement de mot de passe</h1>
 {% if message %}
-<span class="message">{{message}}</span>
+<span class="flash-message">{{message}}</span>
 <p>Cliquez <a href="{% url chercheurs.views.chercheur_login %}">ici</a> pour accéder à votre <a href="{% url chercheurs.views.chercheur_login %}">espace chercheur.</a> </p>
 {% endif %}
 <form method="post">
