--- a/auf_savoirs_en_partage/templates/accounts/send_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/send_password.html
@@ -1,9 +1,9 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>Demande de changement de mot de passe</h4>
+<h1>Demande de changement de mot de passe</h1>
 {% if form.is_valid %}
-<span class="message">Un message a été envoyé à l'adresse électronique spécifiée.</span>
+<span class="flash-message">Un message a été envoyé à l'adresse électronique spécifiée.</span>
 {% else %}
 <form method="post">
     <fieldset>
