--- a/auf_savoirs_en_partage/templates/chercheurs/conversion.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/conversion.html
@@ -1,113 +1,105 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>Répertoire des chercheurs - conversion</h4>
+<h1>Répertoire des chercheurs - conversion</h1>
 
-<p class="texte" style="font-style=italic">
-Pour chaque <b>domaine de recherche</b>, la liste des anciens <b>réseaux de chercheurs</b> associés. Les chercheurs de ces anciens réseaux ont été associés automatiquement aux nouveaux domaines de recherche.
+<p>
+Pour chaque <b>domaine de recherche</b>, la liste des anciens <b>réseaux de
+chercheurs</b> associés. Les chercheurs de ces anciens réseaux ont été
+associés automatiquement aux nouveaux domaines de recherche.
 </p>
 
-<h5>Thématique prioritaire 1 : Langue française, diversité culturelle et linguistique</h5>
+<h2>Thématique prioritaire 1 : Langue française, diversité culturelle et linguistique</h2>
 
-<div class="texte">
-    <h6>Domaine de recherche "Langues pour le développement"</h6>
-    <ul>
-        <li>réseau de chercheurs "Dynamique des langues et francophonie"</li>
-        <li>réseau de chercheurs "Étude du français en francophonie"</li>
-        <li>réseau de chercheurs "Lexicologie, Terminologie, Traduction"</li>
-    </ul>
-    
-    <h6>Domaine de recherche "Littératures au Sud"</h6>
-    <ul>
-        <li>réseau de chercheurs "Littérature francophone d'Afrique subsaharienne et de l'océan Indien (CRITAOI)"</li>
-        <li>réseau de chercheurs "Littératures d'enfance"</li>
-    </ul>
-    
-    <h6>Domaine de recherche "Cultures"</h6>
-    <ul>
-        <li>réseau de chercheurs "Diversité des expressions culturelles et artistiques, et mondialisations"</li>
-    </ul>
+<h3>Domaine de recherche "Langues pour le développement"</h3>
+<ul>
+    <li>réseau de chercheurs "Dynamique des langues et francophonie"</li>
+    <li>réseau de chercheurs "Étude du français en francophonie"</li>
+    <li>réseau de chercheurs "Lexicologie, Terminologie, Traduction"</li>
+</ul>
 
-</div>
+<h3>Domaine de recherche "Littératures au Sud"</h3>
+<ul>
+    <li>réseau de chercheurs "Littérature francophone d'Afrique subsaharienne et de l'océan Indien (CRITAOI)"</li>
+    <li>réseau de chercheurs "Littératures d'enfance"</li>
+</ul>
 
-<h5>Thématique prioritaire 2 : État de droit, démocratie et société"</h5>
+<h3>Domaine de recherche "Cultures"</h3>
+<ul>
+    <li>réseau de chercheurs "Diversité des expressions culturelles et artistiques, et mondialisations"</li>
+</ul>
 
-<div class="texte">
-    <h6>Domaine de recherche "Cultures juridiques et gouvernance"</h6>
-    <ul>
-        <li>réseau de chercheurs "Droits fondamentaux"</li>
-        <li>réseau de chercheurs "Droit de la santé"</li>
-        <li>réseau de chercheurs "Genre, droits et citoyenneté"</li>
-    </ul>
+<h2>Thématique prioritaire 2 : État de droit, démocratie et société</h2>
 
-    <h6>Domaine de recherche "Figures de l'Etat"</h6>
-    <ul>
-        <li>réseau de chercheurs "Droits fondamentaux"</li>
-        <li>réseau de chercheurs "Droit de la santé"</li>
-    </ul>
+<h3>Domaine de recherche "Cultures juridiques et gouvernance"</h3>
+<ul>
+    <li>réseau de chercheurs "Droits fondamentaux"</li>
+    <li>réseau de chercheurs "Droit de la santé"</li>
+    <li>réseau de chercheurs "Genre, droits et citoyenneté"</li>
+</ul>
 
-    <h6>Domaine de recherche "Francophonie institutionnelle, État(s) francophone(s) et francophonie"</h6>
-    <ul>
-        <li>réseau de chercheurs "Droits fondamentaux"</li>
-        <li>réseau de chercheurs "Droit de la santé"</li>
-        <li>réseau de chercheurs "L'état de droit saisi par la philosophie"</li>
-    </ul>
-</div>
+<h3>Domaine de recherche "Figures de l'État"</h3>
+<ul>
+    <li>réseau de chercheurs "Droits fondamentaux"</li>
+    <li>réseau de chercheurs "Droit de la santé"</li>
+</ul>
 
-<h5>Thématique prioritaire 3 - Environnement, eau, énergie et climat</h5>
+<h3>Domaine de recherche "Francophonie institutionnelle, État(s) francophone(s) et francophonie"</h3>
+<ul>
+    <li>réseau de chercheurs "Droits fondamentaux"</li>
+    <li>réseau de chercheurs "Droit de la santé"</li>
+    <li>réseau de chercheurs "L'état de droit saisi par la philosophie"</li>
+</ul>
 
-<div class="texte">
-    <h6>Domaine de recherche "Agronomie"</h6>
-    <ul>
-        <li>réseau de chercheurs "Biotechnologies végétales"</li>
-        <li>réseau de chercheurs "Génie des procédés appliqué à l'agro-alimentaire"</li>
-        <li>réseau de chercheurs "Érosion et gestion conservatoire des eaux et des sols</li>
-        <li>réseau de chercheurs "Environnement et développement durable</li>
-    </ul>
+<h2>Thématique prioritaire 3 : Environnement, eau, énergie et climat</h2>
 
-    <h6>Domaine de recherche "Biodiversité"</h6>
-    <ul>
-        <li>réseau de chercheurs "Environnement et développement durable"</li>
-    </ul>
+<h3>Domaine de recherche "Agronomie"</h3>
+<ul>
+    <li>réseau de chercheurs "Biotechnologies végétales"</li>
+    <li>réseau de chercheurs "Génie des procédés appliqué à l'agro-alimentaire"</li>
+    <li>réseau de chercheurs "Érosion et gestion conservatoire des eaux et des sols"</li>
+    <li>réseau de chercheurs "Environnement et développement durable"</li>
+</ul>
 
-    <h6>Domaine de recherche "Changements climatiques"</h6>
-    <ul>
-        <li>réseau de chercheurs "Télédétection"</li>
-    </ul>
+<h3>Domaine de recherche "Biodiversité"</h3>
+<ul>
+    <li>réseau de chercheurs "Environnement et développement durable"</li>
+</ul>
 
-    <h6>Domaine de recherche "Énergie"</h6>
-    <ul>
-        <li>réseau de chercheurs "Environnement et développement durable"</li>
-    </ul>
+<h3>Domaine de recherche "Changements climatiques"</h3>
+<ul>
+    <li>réseau de chercheurs "Télédétection"</li>
+</ul>
 
-    <h6>Domaine de recherche "Ville durable"</h6>
-    <ul>
-        <li>réseau de chercheurs "Environnement et développement durable</li>
-    </ul>
-</div>
+<h3>Domaine de recherche "Énergie"</h3>
+<ul>
+    <li>réseau de chercheurs "Environnement et développement durable"</li>
+</ul>
 
-<h5>Thématique prioritaire 4 "Développement durable et bien-être des populations</h5>
+<h3>Domaine de recherche "Ville durable"</h3>
+<ul>
+    <li>réseau de chercheurs "Environnement et développement durable</li>
+</ul>
 
-<div class="texte">
-    <h6>Domaine de recherche "Économie du développement"</h6>
-    <ul>
-        <li>réseau de chercheurs "Entrepreneuriat"</li>
-        <li>réseau de chercheurs "Analyse économique et développement"</li>
-    </ul>
+<h2>Thématique prioritaire 4 : Développement durable et bien-être des populations</h2>
 
-    <h6>Domaine de recherche "Santé et bien-être des populations"</h6>
-    <ul>
-        <li>réseau de chercheurs "Maladies parasitaires et vectorielles"</li>
-        <li>réseau de chercheurs "Dynamiques démographiques et sociétés"</li>
-    </ul>
-</div>
+<h3>Domaine de recherche "Économie du développement"</h3>
+<ul>
+    <li>réseau de chercheurs "Entrepreneuriat"</li>
+    <li>réseau de chercheurs "Analyse économique et développement"</li>
+</ul>
 
-<h5>Thématique prioritaire 5 : Économie de la connaissance</h5>
+<h3>Domaine de recherche "Santé et bien-être des populations"</h3>
+<ul>
+    <li>réseau de chercheurs "Maladies parasitaires et vectorielles"</li>
+    <li>réseau de chercheurs "Dynamiques démographiques et sociétés"</li>
+</ul>
 
-<div class="texte">
-    <h6>Domaine de recherche "Res@TICE"</h6>
-    <ul>
-        <li>réseau de chercheurs "Réseau de chercheurs en technologies de l'information et de la communication pour l'enseignement"</li>
-    </ul>
-</div>
+<h2>Thématique prioritaire 5 : Économie de la connaissance</h2>
+
+<h3>Domaine de recherche "Res@TICE"</h3>
+<ul>
+    <li>réseau de chercheurs "Réseau de chercheurs en technologies de l'information et de la communication pour l'enseignement"</li>
+</ul>
+
 {% endblock %}
