--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -10,32 +10,30 @@
     {% include "chercheurs/actions.html" %}
 </ul>
 
-<h4>Répertoire des chercheurs</h4>
+<h1>Répertoire des chercheurs</h1>
 
-<div class="texte">
-    <p>
-    Bienvenue sur le répertoire des chercheurs francophones de l'Agence
-    universitaire de la Francophonie (AUF).
-    </p>
-    <p>
-    Cet outil recense les universitaires (enseignants, chercheurs, doctorants)
-    impliqués, ou souhaitant s'impliquer, dans les projets scientifiques appuyés
-    par l'AUF. Il permet à la communauté scientifique de se mobiliser sur des
-    projets en fonction de repères thématiques et/ou régionaux. 
-    </p>
-    <p>
-    Dans le cadre de la programmation quadriennale, la politique scientifique de
-    l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires
-    régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus
-    le critère d'organisation du répertoire (consulter la 
-    <a href="{% url chercheurs.views.conversion %}">table de passage</a>). Les
-    chercheurs précisent leur <a href="{% url chercheurs.views.conversion %}">domaine de recherche</a>,
-    discipline, thème(s) et groupe(s) de recherche, et ajoutent des mots-clés
-    pour affiner leur profil scientifique.
-    </p>
-</div>
+<p>
+Bienvenue sur le répertoire des chercheurs francophones de l'Agence
+universitaire de la Francophonie (AUF).
+</p>
+<p>
+Cet outil recense les universitaires (enseignants, chercheurs, doctorants)
+impliqués, ou souhaitant s'impliquer, dans les projets scientifiques appuyés
+par l'AUF. Il permet à la communauté scientifique de se mobiliser sur des
+projets en fonction de repères thématiques et/ou régionaux. 
+</p>
+<p>
+Dans le cadre de la programmation quadriennale, la politique scientifique de
+l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires
+régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus
+le critère d'organisation du répertoire (consulter la 
+<a href="{% url chercheurs.views.conversion %}">table de passage</a>). Les
+chercheurs précisent leur <a href="{% url chercheurs.views.conversion %}">domaine de recherche</a>,
+discipline, thème(s) et groupe(s) de recherche, et ajoutent des mots-clés
+pour affiner leur profil scientifique.
+</p>
 
-<h5>Recherche</h5>
+<h2>Recherche</h2>
 
 <form method="get" action="">
     <table id="repertoire_recherche">
@@ -52,9 +50,10 @@
     </table>
 </form>
 
-<h5>Résultats : {{nb_chercheurs}} chercheurs correspondant à votre recherche</h5>
+<h2>Résultats</h2>
+<div class="sous-titre"> {{nb_chercheurs}} chercheurs correspondant à votre recherche</div>
 
-<div class="centre">{% paginate %}</div>
+<div class="pagination">{% paginate %}</div>
 <table id="repertoire">
     <tr>
         <th>{% sort_link "nom" "Nom" %}</th>
@@ -69,6 +68,6 @@
     </tr>
     {% endfor %}
 </table>
-<div class="centre">{% paginate %}</div>
+<div class="pagination">{% paginate %}</div>
 
 {% endblock %}
