--- a/auf_savoirs_en_partage/templates/savoirs/actualite.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite.html
@@ -1,11 +1,11 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>{{ actualite.titre }}</h4>
+<h1>{{ actualite.titre }}</h1>
 <p>{{ actualite.date|date:"d F Y" }}</p>
 <p>{{ actualite.texte }}</p>
-<p><span class="lbl">Source:</span> {{ actualite.source }}<br>
-   <span class="lbl">Disciplines:</span> {{ actualite.disciplines.all|join:", " }}<br>
-   <span class="lbl">Régions:</span> {{ actualite.regions.all|join:", " }}</p>
+<p><span class="label">Source:</span> {{ actualite.source }}<br>
+   <span class="label">Disciplines:</span> {{ actualite.disciplines.all|join:", " }}<br>
+   <span class="label">Régions:</span> {{ actualite.regions.all|join:", " }}</p>
 <a href="{{ actualite.url }}">Lire la suite...</a>
 {% endblock %}
