--- a/auf_savoirs_en_partage/templates/savoirs/ressource_resultat.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_resultat.html
@@ -1,20 +1,18 @@
 {% load search %}
 
 <div class="resultatRecherche">
-    <a class="le-titre" href="{% url savoirs.views.ressource_retrieve ressource.id %}">{{ ressource.title|highlight:search_regexp }}</a>
+    <div class="titre">
+        <a href="{% url savoirs.views.ressource_retrieve ressource.id %}">{{ ressource.title|highlight:search_regexp }}</a>
+    </div>
     {% if ressource.creator %}
-    <div><span class="lbl">Auteur:</span> {{ ressource.creator|highlight:search_regexp }}</div>
+    <div><span class="label">Auteur:</span> {{ ressource.creator|highlight:search_regexp }}</div>
     {% endif %}
     {% if ressource.description %}
-    <div class="resultatResume"><span class="lbl">Résumé:</span> {{ ressource.description|excerpt:search_regexp|highlight:search_regexp }}</div>
+    <div><span class="label">Résumé:</span> {{ ressource.description|excerpt:search_regexp|highlight:search_regexp }}</div>
     {% endif %}
-    <div class="fiche"><span>Fiche: </span><a href="{% url savoirs.views.ressource_retrieve ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
-    <div class="original"><span>Contenu original: </span><a target="_blank" href="{{ ressource.uri }}">{{ ressource.uri }}</a></div>
-    <div class="provenance"><span>Provenance: </span><a target="_blank" href="{{ ressource.getServeurURL }}">{{ ressource.getServeurURL }}</a></div>
+    <div class="details">
+        <div><span>Fiche: </span><a href="{% url savoirs.views.ressource_retrieve ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
+        <div><span>Contenu original: </span><a target="_blank" href="{{ ressource.uri }}">{{ ressource.uri }}</a></div>
+        <div><span>Provenance: </span><a target="_blank" href="{{ ressource.getServeurURL }}">{{ ressource.getServeurURL }}</a></div>
+    </div>
 </div>
-
-    {% comment %}
-    {% if user.is_authenticated %}
-    <a href="{{ r.admin_url}}" target="_blank">Modifier</a>
-    {% endif %}
-    {% endcomment %}
